--- a/index/index.html
+++ b/index/index.html
@@ -106,7 +106,7 @@
                                         的时代<br>
                                     </h1>
                                     <div class="btn-box">
-                                        <a href="" class="btn-1">
+                                        <a href="https://mp.weixin.qq.com/s/1mmpyuXjVYkZquQCGp2j5w" class="btn-1">
                                             立刻了解
                                         </a>
                                     </div>
@@ -157,7 +157,7 @@
         <h4>聚星壹开电子发票打印二维码步骤</h4>
 
         <div>
-            <a href="https://mp.weixin.qq.com/s/Kx-iM0RYo9JwJfeylQOJog">
+            <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&m=ewei_shopv2&do=mobile&r=article&aid=29&mid=3527">
                 点击了解
             </a>
         </div>
@@ -187,7 +187,7 @@
             </p>
         </div>
         <div>
-            <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&m=ewei_shopv2&do=mobile&r=article&aid=29&mid=3527">
+            <a href="https://mp.weixin.qq.com/s/Kx-iM0RYo9JwJfeylQOJog">
                 Read More
             </a>
         </div>
