--- a/index/index.html
+++ b/index/index.html
@@ -101,9 +101,9 @@
                             <div class="col-md-6 ">
                                 <div class="slider_detail-box">
                                     <h1>
-                                        欢迎来到 <br>
+                                        拥抱 <br>
                                         电子发票 <br>
-                                        的时代<br>
+                                        新时代<br>
                                     </h1>
                                     <div class="btn-box">
                                         <a href="https://mp.weixin.qq.com/s/1mmpyuXjVYkZquQCGp2j5w" class="btn-1">
@@ -137,7 +137,7 @@
             </div>
             <div class="d-flex justify-content-center justify-content-sm-end">
                 <button type="submit" class="">
-                    Search
+                    点击查询
                 </button>
             </div>
         </form>
@@ -188,7 +188,7 @@
         </div>
         <div>
             <a href="https://mp.weixin.qq.com/s/Kx-iM0RYo9JwJfeylQOJog">
-                Read More
+                点击了解
             </a>
         </div>
         <div>
@@ -203,7 +203,7 @@
             </ol>
             <div>
                 <a href="https://mp.weixin.qq.com/s/fS1_olT1gnsL-6U3GtpPUw">
-                    Read More
+                    点击了解
                 </a>
             </div>
             </p>
@@ -217,7 +217,7 @@
             </ol>
             <div>
                 <a href="https://mp.weixin.qq.com/s/tqBDfIhugfvFzRkQ8pMdJQ">
-                    Read More
+                    点击了解
                 </a>
             </div>
             </p>
