--- a/index/jieguo.html
+++ b/index/jieguo.html
@@ -46,7 +46,7 @@
     #q-graph tr, #q-graph th, #q-graph td {
       position: absolute;
       bottom: 0;
-      width: 150px;
+      width: 130px;
       z-index: 2;
       margin: 0;
       padding1: 0;
@@ -100,15 +100,15 @@
     }
 
     #q-graph #q2 {
-      left: 90px;
+      left: 95px;
     }
 
     #q-graph #q3 {
-      left: 180px;
+      left: 190px;
     }
 
     #q-graph #q4 {
-      left: 270px;
+      left: 285px;
       border-right: none;
     }
 
@@ -134,13 +134,13 @@
     }
 
     #q-graph .sent {
-      left: 0px;
+      left: -10px;
       background-color: #39cccc;
       border-color: transparent;
     }
 
     #q-graph .paid {
-      left: 43px;
+      left: 35px;
       background-color: #7fdbff;
       border-color: transparent;
     }
@@ -165,6 +165,7 @@
       padding-top: 0px;
       padding-bottom: 16px;
       padding-left: 16px;
+      overflow: hidden;
     }
 
     .tabs .tab-header {
@@ -245,9 +246,8 @@
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2949681_qbjijkxi7xk.css">
 
 </head>
-<body>
-<h2>模拟企业</h2><!--输入单位名称-->
 <div class="container">
+  <h2>模拟企业</h2><!--输入单位名称-->
   <h4 id="ymd"></h4>
   <div class="tabs">
     <div class="tab-header">
