--- a/index/jieguo.html
+++ b/index/jieguo.html
@@ -13,6 +13,7 @@
     }
 
     body {
+      display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -57,15 +58,15 @@
     }
 
     #q-graph #q2 {
-      left: 95px;
+      left: 80px;
     }
 
     #q-graph #q3 {
-      left: 190px;
+      left: 160px;
     }
 
     #q-graph #q4 {
-      left: 285px;
+      left: 240px;
       border-right: none;
     }
 
@@ -78,7 +79,7 @@
     }
 
     #q-graph .bar {
-      width: 37px;
+      width: 30px;
       border: 1px solid;
       border-bottom: none;
       color: #000;
@@ -91,7 +92,7 @@
     }
 
     #q-graph .sent {
-      left: -10px;
+      left: -2px;
       background-color: #39cccc;
       border-color: transparent;
     }
