--- a/index/jieguo.html
+++ b/index/jieguo.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0                                                                            ">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>查询结果</title>
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2948778_luwb7pmpqwd.css">
@@ -114,6 +114,7 @@
       padding-top: 0px;
       padding-bottom: 16px;
       padding-left: 16px;
+        overflow: scroll;
 
     }
 
