--- a/index/jieguo.html
+++ b/index/jieguo.html
@@ -57,15 +57,15 @@
     }
 
     #q-graph #q2 {
-      left: 80px;
+      left: 100px;
     }
 
     #q-graph #q3 {
-      left: 160px;
+      left: 200px;
     }
 
     #q-graph #q4 {
-      left: 240px;
+      left: 300px;
       border-right: none;
     }
 
@@ -74,7 +74,7 @@
       vertical-align: top;
       font-weight: normal;
       color: #333;
-      margin-left: -40px;
+      margin-left: px;
     }
 
     #q-graph .bar {
@@ -91,13 +91,13 @@
     }
 
     #q-graph .sent {
-      left: -2px;
+      left: 20px;
       background-color: #39cccc;
       border-color: transparent;
     }
 
     #q-graph .paid {
-      left: 35px;
+      left: 60px;
       background-color: #7fdbff;
       border-color: transparent;
     }
