--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -150,15 +150,14 @@
 
                         </p>
                         <ul>
-                            <li><i class="ri-check-double-line"></i>提供电子发票开票助手——聚星电票相关服务/li>
+                            <li><i class="ri-check-double-line"></i>提供电子发票开票助手——聚星电票相关服务</li>
                             <li><i class="ri-check-double-line"></i>提供收钱吧线下全产业链服务</li>
                             <li><i class="ri-check-double-line"></i>提供天财商龙、菜么么、银豹等多家收银系统服务</li>
                         </ul>
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0">
                         <p>
-                            聚星云创平台以支付为入口,大力推动“支付+”战略，为创业者构建以商户为中心的多元化创业机会，平台为商户提供支付全产品链、收银系统、智慧门店、电子发票服务、营销推广等产品服务；
-                            公司将聚焦商家数字化经营为使命，为平台伙伴提供整套的运营方案和服务，真正能让“想干事、能干事、能成事”的人才通过努力和团队协作，干出结果，干出未来！
+                            聚星云创平台以支付为入口,大力推动“支付+”战略，为创业者构建以商户为中心的多元化创业机会，平台为商户提供支付全产品链、收银系统、智慧门店、电子发票服务、营销推广等产品服务； 公司将聚焦商家数字化经营为使命，为平台伙伴提供整套的运营方案和服务，真正能让“想干事、能干事、能成事”的人才通过努力和团队协作，干出结果，干出未来！
                         </p>
                         <a href="#" class="btn-learn-more">了解更多</a>
                     </div>
@@ -177,25 +176,30 @@
                     <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
                         <div class="content">
-                            <h3>电子发票不是可选  需要是<strong>必选</strong></h3>
+                            <h3>电子发票不是可选 需要是<strong>必选</strong></h3>
                             <p>
-                                eLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                                聚星壹开电子发票 服务商家的好帮手
                             </p>
+                            <p>无纸高效、降本增效、只需三秒</p>
                         </div>
 
                         <div class="accordion-list">
                             <ul>
                                 <li>
-                                    <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                                    <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> 为什么要用 <strong>电子发票？</strong><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                                     <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
-                                        </p>
+
+                                        <p>1.国家政策要求发票电子化</p>
+                                        <p>2.不怕丢失，长久保存</p>
+                                        <p>3.查询、统计、管理更方便</p>
+                                        <p>4.提高开票效率、降低人工成本</p>
+                                        <p>5.消费者不用等待</p>
+
                                     </div>
                                 </li>
 
                                 <li>
-                                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> s<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                                     <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                                         <p>
                                             Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
@@ -225,7 +229,6 @@
             </div>
         </section>
         <!-- End Why Us Section -->
-
         <!-- ======= Skills Section ======= -->
         <section id="skills" class="skills">
             <div class="container" data-aos="fade-up">
