--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -82,7 +82,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-                    <h1>聚星电子发票</h1>
+                    <br>
+                    <br>
+                    
+                
+                    <h1>电子发票</h1>
+                    <br>
+                    <br>
                     <br>
                     <h1 style="font-size: 3rem;">全国招募合伙人</h1>
                     <br>
