--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -36,10 +36,10 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
-
-            <h1 class="logo me-auto"><a href="index.html">聚星电票</a></h1>
+<!-- <img src="assets/img/logo1.jpg"  class="logo me-auto" alt=""> -->
+            <!-- <h1 class="logo me-auto"><a href="index.html">聚星电票</a></h1> -->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+            <a href="index.html" class="logo me-auto"><img src="assets/img/logo2.png" alt="" class="img-fluid"></a>
 
             <nav id="navbar" class="navbar">
                 <ul>
@@ -86,12 +86,9 @@
                     <br>
                     
                 
-                    <h1>电子发票</h1>
-                    <br>
-                    <br>
-                    <br>
+                    <h1 style="font-size: 2.5rem;">电子发票</h1>
+            <br>
                     <h1 style="font-size: 3rem;">全国招募合伙人</h1>
-                    <br>
                     <br>
                     <br>
                     <div class="d-flex justify-content-center justify-content-lg-start">
@@ -152,7 +149,7 @@
                     <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
                         <div class="content">
-                            <h3>电子发票不是可选 需要是<strong>必选</strong></h3>
+                            <h3>电子发票不是可选 而是<strong>必选</strong></h3>
                             <p>
                                 聚星壹开电子发票 服务商家的好帮手
                             </p>
