--- a/juxingyunchuang/PL_Page/PL_Page.html
+++ b/juxingyunchuang/PL_Page/PL_Page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>导表批量开票</title>
+    <title>批量开票极速版</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
@@ -32,32 +32,35 @@
 </head>
 
 <body>
-    <!-- 导航 -->
-    <header id="header">
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container">
-                <div class="navbar-brand">
-                    <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
-                </div>
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                </div>
-                <div class="collapse navbar-collapse" id="example-navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="nav_menu"><a href="index.html">首页</a></li>
-                        <li class="nav_menu active_menu"><a href="extreme.html">导表批量开票</a></li>
-                        <li class="nav_menu"><a href="scancode.html">扫码开票</a></li>
-                        <li class="nav_menu"><a href="api.html">对接开票</a></li>
-                        <li class="nav_menu"><a href="agent.html">代理合作</a></li>
-                    </ul>
-                </div>
+   <!-- 导航 -->
+   <header id="header">
+
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-brand">
+                <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
             </div>
-        </nav>
-    </header>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            </div>
+            <div class="collapse navbar-collapse" id="example-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="nav_menu"><a href="index.html">首页</a></li>
+                    <li class="nav_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
+                    <li class="nav_menu active_menu"><a href="../LP_Page/LP_Page.html">码上开票</a></li>
+                    
+                    <li class="nav_menu"><a href="../PL_Page/PL_Page.html">批量开票极速版</a></li>
+                    <li class="nav_menu"><a href="../FA_Page/FA_Page.html">发票解决方案</a></li>
+                  
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
     <section class="indexWrap">
         <section class="index_block">
             <img src="images/extreme_bg.png" class="index_bg">
