--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -52,7 +52,7 @@
                       ><span>电票发票服务</span> <i class="bi bi-chevron-down"></i
                     ></a>
                     <ul>
-                      <li><a href="SM_Page/Sm_Page.html">电票扫码版</a></li>
+                      <li><a href="../juxingyunchuang/SM_Page/SM_Page.html">电票扫码版</a></li>
                       <!-- 
                                       <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                                       <ul>
@@ -66,10 +66,10 @@
                             </li>
                                   </li> 
                               -->
-                      <li><a href="LP_Page/Lp_Page.html">码上开票</a></li>
-                      <li><a href="PL_Page/PL_Page.html">批量开票</a></li>
-                      <li><a href="">发票解决方案</a></li>
-                      <li><a href="DA_Page/DA_Page.html">档案管理</a></li>
+                      <li><a href="../juxingyunchuang/LP_Page/Lp_Page.html">码上开票</a></li>
+                      <li><a href="../juxingyunchuang/PL_Page/PL_Page.html">批量开票</a></li>
+                      <li><a href="../juxingyunchuang/FA_Page/FA_Page.html">发票解决方案</a></li>
+                      <li><a href="../juxingyunchuang/DA_Page/DA_Page.html">档案管理</a></li>
                     </ul>
                   </li>
             
