--- a/juxingyunchuang/SM_Page/SM_Page.html
+++ b/juxingyunchuang/SM_Page/SM_Page.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-default" role="navigation">
             <div class="container">
                 <div class="navbar-brand">
-                    <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+                    <a href="index.html"><img src="../assets/img/IMG_1555.PNG" alt="Logo"></a>
                 </div>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
@@ -52,8 +52,8 @@
         <section class="index_block">
             <img src="images/smkp_bg.png" class="index_bg">
             <section class="index_content">
-                <h3 class="banner_title">消费者体验确实好！</h3>
-                <p class="banner_text">适用于门店/窗口类行业，消费者扫码传抬头或自助开电票。<br>分立牌版、小票版、码上开票(传抬头)</p>
+                <h3 class="banner_title">聚星壹开发票助手-扫码版</h3>
+                <p class="banner_text">3秒出票，无纸高效！<br>分立牌版、小票版、码上开票(传抬头)</p>
                 <div class="header-btn">
                     <a href="download/盟度发票助手-小票版.zip" class="btn-custom btn-border btn-icon smooth-scroll">小票版下载</a>
                     <span>（免费使用7天）</span>
@@ -73,7 +73,7 @@
             <div class="row text-center">
                 <div class="col-md-8 col-lg-12">
                     <video controls="controls" poster="images/sm_sp.png" class="sp_video">
-                    <source src="images/sm.mp4" type="video/mp4" class="sp_video">
+                    <source src="../assets/media/166.MP4" type="video/mp4" class="sp_video">
                 </video>
                 </div>
             </div>
@@ -256,11 +256,11 @@
                 </div>
                 <div class=" col-lg-5">
                     <div class="footer-single-widget mb-50">
-                        <h4>联系我们（北京总部）</h4>
+                        <h4>联系我们</h4>
                         <ul>
-                            <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-6677-818&nbsp;&nbsp;&nbsp;&nbsp;010-82783415 </a></li>
-                            <li><a href="#"><i class="ti-email"></i> QQ：800183415</a></li>
-                            <li><a href="#"><i class="ti-location-pin"></i> 北京市海淀区上地信息路11号彩虹大厦北楼西区207室</a></li>
+                            <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-044-0515</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 邮箱：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-location-pin"></i> 盐城市城南新区新弄里2号楼909室</a></li>
                         </ul>
                     </div>
                 </div>
@@ -268,9 +268,9 @@
                     <div class="footer-single-widget mb-50">
                         <h4>产品合作</h4>
                         <ul>
-                            <li><a href="#"><i class="ti-email"></i> 商务合作：business@moredo.cn</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 加入我们：hr@moredo.cn</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 产品合作：sale@moredo.cn</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 商务合作：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 加入我们：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 产品合作：juxingdp@126.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -282,15 +282,15 @@
                     <div class="col-md-6">
                         <div class="copy-right-menu">
                             <ul>
-                                <li><a href="http://www.moredo.cn/" target="_blank">公司官网</a></li>
-                                <li><a href="http://www.moredo.cn/about.html?href1" target="_blank">公司简介</a></li>
-                                <li><a href="http://www.moredo.cn/about.html?href2" target="_blank">联系我们</a></li>
+                                <li><a href="http://www.juxin365.cn/" target="_blank">公司官网</a></li>
+                                <li><a href="http://www.juxin365.cn/#about" target="_blank">公司简介</a></li>
+                                <li><a href="http://www.juxin365.cn/#contact" target="_blank">联系我们</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-6 text-right mt-sm-cu-30">
                         <div class="copy-right-content">
-                            <p>Copyright 2016-2022 北京盟度知汇科技有限公司 <a href="http://beian.miit.gov.cn/" target="_blank">京ICP备2021018691号</a></p>
+                            <p>Copyright 2016-2022   江苏聚鑫呗网络科技有限公司 <a href="http://beian.miit.gov.cn/" target="_blank">备案号</a></p>
                         </div>
                     </div>
                 </div>
