--- a/juxingyunchuang/DA_Page/DA_Page.html
+++ b/juxingyunchuang/DA_Page/DA_Page.html
@@ -14,10 +14,11 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="shortcut icon" href="../assets/img/favicon.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/files.css">
     <link rel="stylesheet" href="css/public.css">
-    <link rel="shortcut icon" href="static/images/favicon.ico">
+
     <style type="text/css">
         html {
             overflow: inherit;
@@ -468,7 +469,7 @@
                             <img src="img/files/bg_left.png">
                         </div>
                         <div class="header-btn text-center">
-                            <a href="download/盟度电票档案管理系统-标准版.zip" class="btn-custom btn-border btn-icon smooth-scroll">立即下载</a>
+                            <a href="download/聚星电票电票档案管理系统-标准版.zip" class="btn-custom btn-border btn-icon smooth-scroll">立即下载</a>
                         </div>
                     </div>
                 </div>
@@ -551,7 +552,7 @@
                     <img src="img/files/feature-1.png" />
                 </div>
                 <div class="col-md-5 col-lg-5 col-txt text-center-sm text-center-xs margin-bottom40-sm margin-bottom40-xs">
-                    <p class="intro">「盟度电票档案管理系统」标准版根据国家有关法律和政策，提供电子会计档案（电子发票）的入帐、识别、读取等操作，自动生成符合规定的存储目录，自动生成台帐，生成财务凭证数据，并提供报销查重以及销项电票生成、交付、排版、打印等功能，帮助企业提升电子发票管理水平，降低财务风险。</p>
+                    <p class="intro">「聚星电票电票档案管理系统」标准版根据国家有关法律和政策，提供电子会计档案（电子发票）的入帐、识别、读取等操作，自动生成符合规定的存储目录，自动生成台帐，生成财务凭证数据，并提供报销查重以及销项电票生成、交付、排版、打印等功能，帮助企业提升电子发票管理水平，降低财务风险。</p>
                 </div>
             </div>
         </div>
