--- a/juxingyunchuang/LP_Page/LP_Page.html
+++ b/juxingyunchuang/LP_Page/LP_Page.html
@@ -9,12 +9,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>码上开票</title>
-    <link rel="SHORTCUT ICON" href="img/Caikaixin.ico" />
+    <link rel="shortcut icon" href="../assets/img/favicon.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style_inset.css">
+    
     <style type="text/css">
         .slicknav_menu .slicknav_icon-bar {
             background: #000 !important;
@@ -183,7 +184,7 @@
                         <h5>改变传统手工录入方式，消费者扫一扫发送抬头，商家实现快速开发票</h5>
                         <div class="subscribe-form-wrapper my-4 m-auto">
                             <div class="slider-btn mt-30">
-                                <a class="btn1" href="download/财开心码上开票.zip"><span>立即下载</span></a>
+                                <a class="btn1" href="download"><span>立即试用</span></a>
                                 <span class="free">免费试用7天</span>
                             </div>
                         </div>
