--- a/juxingyunchuang/FA_Page/FA_Page.html
+++ b/juxingyunchuang/FA_Page/FA_Page.html
@@ -3,31 +3,31 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>对接开票</title>
+    <title>发票解决方案</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="images/moredo.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.jpg">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ionicons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/api.css">
-    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="../assets/css/mystyle.css">
 </head>
 
 <body>
     <!-- 导航 -->
     <header id="header">
-        <!-- 导航 -->
+        
         <nav class="navbar navbar-default" role="navigation">
             <div class="container">
                 <div class="navbar-brand">
-                    <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+                    <a href="index.html"><img src="../assets/img/IMG_1555.PNG" alt="Logo"></a>
                 </div>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
@@ -39,8 +39,8 @@
                 <div class="collapse navbar-collapse" id="example-navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="nav_menu"><a href="index.html">首页</a></li>
-                        <li class="nav_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
-                        <li class="nav_menu active_menu"><a href="../LP_Page/LP_Page.html">码上开票</a></li>
+                        <li class="nav_menu active_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
+                        <li class="nav_menu "><a href="../LP_Page/LP_Page.html">码上开票</a></li>
                         
                         <li class="nav_menu"><a href="../PL_Page/PL_Page.html">批量开票极速版</a></li>
                         <li class="nav_menu"><a href="../FA_Page/FA_Page.html">发票解决方案</a></li>
@@ -56,7 +56,7 @@
             <img src="images/index_bg.png" class="index_bg">
             <section class="index_content">
                 <h3 class="banner_title">客户案例多，场景丰富！</h3>
-                <p class="banner_text">mAPI是盟度最新一代业务系统对接开票接口，支持纸票所有票种，支持电<br/>票PDF及OFD格式，支持纸票异地打印，支持多税盘集中管理。</p>
+                <p class="banner_text">JAPI是聚星电票最新一代业务系统对接开票接口，支持纸票所有票种，支持电<br/>票PDF及OFD格式，支持纸票异地打印，支持多税盘集中管理。</p>
                 <div class="header-btn btns-api">
                     <a href="http://ek.caikaixin.cn/v2/demo/index.html" target="_blank" class="btn-custom buttons_custom">在线体验</a>
                     <a href="http://api.moredo.cn/" target="_blank" class="btn-custom buttons_custom">开放平台</a>
@@ -97,7 +97,7 @@
                 <div class="col-md-5 col-12 main_text">
                     <div class="main_number">01</div>
                     <h2 class="main_title" style="font-weight: bold;">扫码开票</h2>
-                    <p class="massage">通过对接mAPI，实现在企业业务系统打印出的收费凭据小票下追加发票提取二维码，缴费客户通过微信或支付宝扫描二维码即可自助开具电子发票。</p>
+                    <p class="massage">通过对接JAPI，实现在企业业务系统打印出的收费凭据小票下追加发票提取二维码，缴费客户通过微信或支付宝扫描二维码即可自助开具电子发票。</p>
                 </div>
                 <!--            <div class="col-md-1"></div>-->
                 <div class="col-md-7 col-12 text-right">
@@ -120,7 +120,7 @@
                 <div class="col-md-5 col-12 main_text">
                     <div class="main_number">02</div>
                     <h2 class="main_title" style="font-weight: bold;">业务系统直开</h2>
-                    <p class="massage">企业业务系统如：物业交付平台、收银管理系统、保单缴费系统等等，使用盟度发票解决方案之后，最终实现在业务系统内直接开票。</p>
+                    <p class="massage">企业业务系统如：物业交付平台、收银管理系统、保单缴费系统等等，使用聚星电票发票解决方案之后，最终实现在业务系统内直接开票。</p>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                 <div class="col-md-5 col-12 main_text">
                     <div class="main_number">03</div>
                     <h2 class="main_title" style="font-weight: bold;">税盘集中管理</h2>
-                    <p class="massage">连锁店和集团类企业，将多个税盘集中到一台电脑上统一管理、集中运维，通过对接mAPI接口，实现分点在业务系统种直接申请开具发票。</p>
+                    <p class="massage">连锁店和集团类企业，将多个税盘集中到一台电脑上统一管理、集中运维，通过对接JAPI接口，实现分点在业务系统种直接申请开具发票。</p>
                 </div>
                 <div class="col-md-7 col-12 text-right">
                     <div class="mr-lg-5">
@@ -244,61 +244,61 @@
         </div>
     </div>
 
-    <!--底部-->
-    <div class="footer-contact-area section-padding-100-0">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-2" style="margin-top: 2%;">
-                    <div class="footer-single-widget mb-50">
-                        <div class="footer-logo text-center">
-                            <a href="#"><img src="images/content/bg/wechat_code.jpg" alt=""></a>
-                            <p style="padding-top: 15px;">扫码关注公众号</p>
-                        </div>
-                    </div>
-                </div>
-                <div class=" col-lg-5">
-                    <div class="footer-single-widget mb-50">
-                        <h4>联系我们（北京总部）</h4>
-                        <ul>
-                            <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-6677-818&nbsp;&nbsp;&nbsp;&nbsp;010-82783415 </a></li>
-                            <li><a href="#"><i class="ti-email"></i> QQ：800183415</a></li>
-                            <li><a href="#"><i class="ti-location-pin"></i> 北京市海淀区上地信息路11号彩虹大厦北楼西区207室</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="footer-single-widget mb-50">
-                        <h4>产品合作</h4>
-                        <ul>
-                            <li><a href="#"><i class="ti-email"></i> 商务合作：business@moredo.cn</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 加入我们：hr@moredo.cn</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 产品合作：sale@moredo.cn</a></li>
-                        </ul>
+   <!--底部-->
+   <div class="footer-contact-area section-padding-100-0">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-2" style="margin-top: 2%;">
+                <div class="footer-single-widget mb-50">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="images/content/bg/wechat_code.jpg" alt=""></a>
+                        <p style="padding-top: 15px;">扫码关注公众号</p>
                     </div>
                 </div>
             </div>
+            <div class=" col-lg-5">
+                <div class="footer-single-widget mb-50">
+                    <h4>联系我们</h4>
+                    <ul>
+                        <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-044-0515</a></li>
+                        <li><a href="#"><i class="ti-email"></i> 邮箱：juxingdp@126.com</a></li>
+                        <li><a href="#"><i class="ti-location-pin"></i> 盐城市城南新区新弄里2号楼909室</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="footer-single-widget mb-50">
+                    <h4>产品合作</h4>
+                    <ul>
+                        <li><a href="#"><i class="ti-email"></i> 商务合作：juxingdp@126.com</a></li>
+                        <li><a href="#"><i class="ti-email"></i> 加入我们：juxingdp@126.com</a></li>
+                        <li><a href="#"><i class="ti-email"></i> 产品合作：juxingdp@126.com</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="copy-right-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="copy-right-menu">
-                            <ul>
-                                <li><a href="http://www.moredo.cn/" target="_blank">公司官网</a></li>
-                                <li><a href="http://www.moredo.cn/about.html?href1" target="_blank">公司简介</a></li>
-                                <li><a href="http://www.moredo.cn/about.html?href2" target="_blank">联系我们</a></li>
-                            </ul>
-                        </div>
+    </div>
+    <div class="copy-right-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copy-right-menu">
+                        <ul>
+                            <li><a href="http://www.juxin365.cn/" target="_blank">公司官网</a></li>
+                            <li><a href="http://www.juxin365.cn/#about" target="_blank">公司简介</a></li>
+                            <li><a href="http://www.juxin365.cn/#contact" target="_blank">联系我们</a></li>
+                        </ul>
                     </div>
-                    <div class="col-md-6 text-right mt-sm-cu-30">
-                        <div class="copy-right-content">
-                            <p>Copyright 2016-2022 北京盟度知汇科技有限公司 <a href="http://beian.miit.gov.cn/" target="_blank">京ICP备2021018691号</a></p>
-                        </div>
+                </div>
+                <div class="col-md-6 text-right mt-sm-cu-30">
+                    <div class="copy-right-content">
+                        <p>Copyright 2016-2022   江苏聚鑫呗网络科技有限公司 <a href="http://beian.miit.gov.cn/" target="_blank">备案号</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
     <!--留言板-->
     <ins id="newBridge" style="display: block;">
     <ins class="nb-nodeboard-base nb-nodeboard-position-base nb-nodeboard-left-bottom nb-show" style="left: 20px; right: auto; top: auto; bottom: 10px; margin-left: 0px; margin-top: 0px; height: auto;">
