--- a/juxingyunchuang/PL_Page/PL_Page.html
+++ b/juxingyunchuang/PL_Page/PL_Page.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="images/moredo.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.jpg">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ionicons.min.css">
@@ -50,8 +50,8 @@
             <div class="collapse navbar-collapse" id="example-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="nav_menu"><a href="index.html">首页</a></li>
-                    <li class="nav_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
-                    <li class="nav_menu active_menu"><a href="../LP_Page/LP_Page.html">码上开票</a></li>
+                    <li class="nav_menu active_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
+                    <li class="nav_menu "><a href="../LP_Page/LP_Page.html">码上开票</a></li>
                     
                     <li class="nav_menu"><a href="../PL_Page/PL_Page.html">批量开票极速版</a></li>
                     <li class="nav_menu"><a href="../FA_Page/FA_Page.html">发票解决方案</a></li>
@@ -66,9 +66,9 @@
             <img src="images/extreme_bg.png" class="index_bg">
             <section class="index_content">
                 <h3 class="banner_title">效率和准确率大幅提升！</h3>
-                <p class="banner_text">导入表格一次性开具多张发票或明细，支持纸票连续打印、电票批量推送，支持智能赋码等。<br>分专业版、极速版、明细版。</p>
+                <p class="banner_text">导入表格一次性开具多张发票或明细，支持纸票连续打印、电票批量推送，支持智能赋码等。</p>
                 <div class="header-btn">
-                    <a href="download/盟度发票批量处理系统V4.0.20210323.exe" class="btn-custom btn-border btn-icon smooth-scroll">极速版下载</a>
+                    <a href="download/" class="btn-custom btn-border btn-icon smooth-scroll">极速版下载</a>
                     <span>（免费使用7天）</span>
                 </div>
             </section>
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section__title-wrapper text-center mb-60">
-                        <h2 class="section__title">盟度发票批量处理系统-极速版是什么？</h2>
+                        <h2 class="section__title">聚星电票发票批量处理系统-极速版是什么？</h2>
                     </div>
                 </div>
                 <p class="text-center title_intro">
@@ -280,7 +280,7 @@
                     <p class="fz16">总经理/张总</p>
                     <p class="fz12">吉林省某医药批发公司</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我们是吉林的一家医药连锁批发公司，目前客户全国各地都有，公司每月发票邮寄的费用成本也在增多，随着公司业务量的增多，开票量也明显增多，以前需要两个会计专职负责开票，使用盟度发票批量处理系统极速版之后，批量开发票大大的提高了我们的开票效率，最近我们也开通了电子发票，这个软件可以直接支持批量开电票，非常方便。
+                        我们是吉林的一家医药连锁批发公司，目前客户全国各地都有，公司每月发票邮寄的费用成本也在增多，随着公司业务量的增多，开票量也明显增多，以前需要两个会计专职负责开票，使用聚星电票发票批量处理系统极速版之后，批量开发票大大的提高了我们的开票效率，最近我们也开通了电子发票，这个软件可以直接支持批量开电票，非常方便。
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -290,7 +290,7 @@
                     <p class="fz16">财务总监/李总</p>
                     <p class="fz12">北京某电商平台</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我们是网上商城，盟度发票批量处理系统极速版从根本上解决了我们公司开发票费时费力的问题，之前我们公司雇佣了四个开票员专门开发票。就这样到月底的那几天还忙不过来，加班加点的，效率很低。上了这套软件之后，我们部门的人力成本从四个变成了两个，出错率也大大降低，每个月做账报账也比之前更及时，出纳员也更轻松了。 </p>
+                        我们是网上商城，聚星电票发票批量处理系统极速版从根本上解决了我们公司开发票费时费力的问题，之前我们公司雇佣了四个开票员专门开发票。就这样到月底的那几天还忙不过来，加班加点的，效率很低。上了这套软件之后，我们部门的人力成本从四个变成了两个，出错率也大大降低，每个月做账报账也比之前更及时，出纳员也更轻松了。 </p>
                 </div>
                 <div class="col-md-3">
                     <div class="anli-img-new">
@@ -299,7 +299,7 @@
                     <p class="fz16">会计/刘女士</p>
                     <p class="fz12">武汉某汽车4S店</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我们公司开票经常一百多张的开，以前开票要在电脑上一个一个的敲，很麻烦，敲完还得一个一个核对，下班以后经常会加班加到晚上八九点，经一个也是做会计的朋友介绍了盟度发票批量处理系统极速版，用了之后才感觉，以前是真的累，现在我们每个月的发票全部直接通过这个软件自动开具，以前几天才能做完的活，现在半天就做完了，而且完全是表格导进去的，也不用担心出错了，特别是盟度的服务人员是真的贴心，每次遇到问题都是很耐心的帮忙解决。
+                        我们公司开票经常一百多张的开，以前开票要在电脑上一个一个的敲，很麻烦，敲完还得一个一个核对，下班以后经常会加班加到晚上八九点，经一个也是做会计的朋友介绍了聚星电票发票批量处理系统极速版，用了之后才感觉，以前是真的累，现在我们每个月的发票全部直接通过这个软件自动开具，以前几天才能做完的活，现在半天就做完了，而且完全是表格导进去的，也不用担心出错了，特别是聚星电票的服务人员是真的贴心，每次遇到问题都是很耐心的帮忙解决。
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -309,7 +309,7 @@
                     <p class="fz16">出纳/王小姐</p>
                     <p class="fz12">江苏某商贸批发公司</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我每天会有40-60张发票要开出，每次开票我都高度紧张，非常担心开错票。一次偶然的机会听朋友推荐盟度发票批量处理系统极速版，可以把我们ERP系统的商品导出后生成模板，批量导入开票软件。几十张发票三五分钟就开完了，大大提高了我的工作效率，真心为盟度发票批量处理系统极速版点赞！
+                        我每天会有40-60张发票要开出，每次开票我都高度紧张，非常担心开错票。一次偶然的机会听朋友推荐聚星电票发票批量处理系统极速版，可以把我们ERP系统的商品导出后生成模板，批量导入开票软件。几十张发票三五分钟就开完了，大大提高了我的工作效率，真心为聚星电票发票批量处理系统极速版点赞！
                     </p>
                 </div>
             </div>
@@ -330,11 +330,11 @@
                 </div>
                 <div class=" col-lg-5">
                     <div class="footer-single-widget mb-50">
-                        <h4>联系我们（北京总部）</h4>
+                        <h4>联系我们</h4>
                         <ul>
-                            <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-6677-818&nbsp;&nbsp;&nbsp;&nbsp;010-82783415 </a></li>
-                            <li><a href="#"><i class="ti-email"></i> QQ：800183415</a></li>
-                            <li><a href="#"><i class="ti-location-pin"></i> 北京市海淀区上地信息路11号彩虹大厦北楼西区207室</a></li>
+                            <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-044-0515</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 邮箱：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-location-pin"></i> 盐城市城南新区新弄里2号楼909室</a></li>
                         </ul>
                     </div>
                 </div>
@@ -342,9 +342,9 @@
                     <div class="footer-single-widget mb-50">
                         <h4>产品合作</h4>
                         <ul>
-                            <li><a href="#"><i class="ti-email"></i> 商务合作：business@moredo.cn</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 加入我们：hr@moredo.cn</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 产品合作：sale@moredo.cn</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 商务合作：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 加入我们：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 产品合作：juxingdp@126.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -356,15 +356,15 @@
                     <div class="col-md-6">
                         <div class="copy-right-menu">
                             <ul>
-                                <li><a href="http://www.moredo.cn/" target="_blank">公司官网</a></li>
-                                <li><a href="http://www.moredo.cn/about.html?href1" target="_blank">公司简介</a></li>
-                                <li><a href="http://www.moredo.cn/about.html?href2" target="_blank">联系我们</a></li>
+                                <li><a href="http://www.juxin365.cn/" target="_blank">公司官网</a></li>
+                                <li><a href="http://www.juxin365.cn/#about" target="_blank">公司简介</a></li>
+                                <li><a href="http://www.juxin365.cn/#contact" target="_blank">联系我们</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-6 text-right mt-sm-cu-30">
                         <div class="copy-right-content">
-                            <p>Copyright 2016-2022 北京盟度知汇科技有限公司 <a href="http://beian.miit.gov.cn/" target="_blank">京ICP备2021018691号</a></p>
+                            <p>Copyright 2016-2022   江苏聚鑫呗网络科技有限公司 <a href="http://beian.miit.gov.cn/" target="_blank">备案号</a></p>
                         </div>
                     </div>
                 </div>
