--- a/juxingyunchuang/SM_Page/SM_Page.html
+++ b/juxingyunchuang/SM_Page/SM_Page.html
@@ -10,12 +10,12 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="images/moredo.ico">
+    <link rel="shortcut icon" href="../assets/img/favicon.jpg">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ionicons.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="../assets/css/mystyle.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-default" role="navigation">
             <div class="container">
                 <div class="navbar-brand">
-                    <a href="index.html"><img src="../assets/img/IMG_1555.PNG" alt="Logo"></a>
+                    <a href="index.html"><img src="../assets/img/IMG_1555.PNG" alt="Logo" ></a>
                 </div>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
@@ -37,8 +37,8 @@
                 <div class="collapse navbar-collapse" id="example-navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="nav_menu"><a href="index.html">首页</a></li>
-                        <li class="nav_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
-                        <li class="nav_menu active_menu"><a href="../LP_Page/LP_Page.html">码上开票</a></li>
+                        <li class="nav_menu active_menu"><a href="../SM_Page/SM_Page.html">聚星壹开发票助手-扫码版</a></li>
+                        <li class="nav_menu "><a href="../LP_Page/LP_Page.html">码上开票</a></li>
                         
                         <li class="nav_menu"><a href="../PL_Page/PL_Page.html">批量开票极速版</a></li>
                         <li class="nav_menu"><a href="../FA_Page/FA_Page.html">发票解决方案</a></li>
