--- a/juxingyunchuang/PL_Page/PL_Page.html
+++ b/juxingyunchuang/PL_Page/PL_Page.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/extreme.css">
-    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="../assets/css/mystyle.css">
     <style type="text/css">
         /*PC端banner*/
 
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="../assets/img/IMG_1555.PNG" alt="Logo"></a>
             </div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
