--- a/juxingyunchuang/DA_Page/DA_Page.html
+++ b/juxingyunchuang/DA_Page/DA_Page.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/files.css">
     <link rel="stylesheet" href="css/public.css">
+    <link rel="stylesheet" href="../assets/css/shangqiao.css">
 
     <style type="text/css">
         html {
@@ -468,9 +469,9 @@
                         <div class="header-txt">
                             <img src="img/files/bg_left.png">
                         </div>
-                        <div class="header-btn text-center">
-                            <a href="download/聚星电票电票档案管理系统-标准版.zip" class="btn-custom btn-border btn-icon smooth-scroll">立即下载</a>
-                        </div>
+                        <!-- <div class="header-btn text-center">
+                            <a href="https://jsyqyf.cn/addons/ytao_universal_reserve/core/web/index.php?r=/mobile/form/index&acid=4&form_id=7" class="btn-custom btn-border btn-icon smooth-scroll">立即试用</a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -552,7 +553,7 @@
                     <img src="img/files/feature-1.png" />
                 </div>
                 <div class="col-md-5 col-lg-5 col-txt text-center-sm text-center-xs margin-bottom40-sm margin-bottom40-xs">
-                    <p class="intro">「聚星电票电票档案管理系统」标准版根据国家有关法律和政策，提供电子会计档案（电子发票）的入帐、识别、读取等操作，自动生成符合规定的存储目录，自动生成台帐，生成财务凭证数据，并提供报销查重以及销项电票生成、交付、排版、打印等功能，帮助企业提升电子发票管理水平，降低财务风险。</p>
+                    <p class="intro">「电票档案管理系统」标准版根据国家有关法律和政策，提供电子会计档案（电子发票）的入帐、识别、读取等操作，自动生成符合规定的存储目录，自动生成台帐，生成财务凭证数据，并提供报销查重以及销项电票生成、交付、排版、打印等功能，帮助企业提升电子发票管理水平，降低财务风险。</p>
                 </div>
             </div>
         </div>
@@ -725,6 +726,37 @@
             </ul>
         </div>
     </div>
+     <!--留言板-->
+   <div class="guanggao-dbbox">
+    <div class="nb-nodeboard-top">
+        <span class="fl">请您留言</span>
+        <span class="fr" id="nb-close"><img src="../assets/img/nodeMax.png" alt=""></span>
+        <span class="fr" id="nb-gb"><img src="../assets/img/nodeMax.png" alt=""></span>
+        <span class="fr" id="nb-show"><img src="../assets/img/nodeMin.png" alt=""></span>
+    </div>
+    <div class="nb-nodeboard-text">
+        <p class="nb-nodeboard-company">百万机遇，等您激发</p>
+        <p class="nb-nodeboard-link">立即咨询</p>
+    </div>
+    <form id="nb_nodeboard_form" autocomplete="off" class="nb-board-form" action="" method="post" >
+        <div class="nb-nodeboard-content">
+            <textarea id="nb-nodeboard-set-content-js" name="square"  placeholder="请在此输入留言内容，我们会尽快与您联系。(必填)"></textarea>
+            <p class="nb-nodeboard-tips" id="nb-nodeboard-tips-js"></p>
+        </div>
+
+        <div class="nb-nodeboard-inputbox" id="nb-nodeboard-name" >
+            <span class="nb-nodeboard-icon nodeName"></span>
+            <input id="nb_nodeboard_set_name" data-write="0" name="name" maxlength="10"  type="text"  placeholder="姓名">
+        </div>
+
+        <div class="nb-nodeboard-inputbox" id="nb_nodeboard_phone" >
+            <span class="nb-nodeboard-icon nodePhone"></span>
+            <input id="nb_nodeboard_set_phone" name="tel" maxlength="11" class="nb-nodeboard-param"  type="text"  placeholder="手机号(必填)">
+        </div>
+        <p class="nb-nodeboardphone-tips" id="nb-nodeboardphone-tips-js"></p>
+        <div id="nb_nodeboard_send" needverifycode="1" class="nb-nodeboard-send-btn">发 送</div>
+    </form>
+</div>
     <!--底部-->
     <div class="footerpage"></div>
     <!-- JavaScripts -->
@@ -739,6 +771,7 @@
     <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
     <script type="text/javascript" src="js/jquery.fancybox-media.js"></script>
     <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
+    <script src="../assets/js/shangqiao.js"></script>
     <!--<script type="text/javascript" src="js/parallax.min.js"></script>-->
     <script type="text/javascript" src="js/script.js"></script>
     <script>
