--- a/juxingyunchuang/SM_Page/SM_Page.html
+++ b/juxingyunchuang/SM_Page/SM_Page.html
@@ -260,7 +260,7 @@
                         <h4>联系我们</h4>
                         <ul>
                             <li><a href="#"><i class="ti-mobile"></i> 服务热线：400-044-0515</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 邮箱：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 邮箱：juxindp@126.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -268,9 +268,9 @@
                     <div class="footer-single-widget mb-50">
                         <h4>产品合作</h4>
                         <ul>
-                            <li><a href="#"><i class="ti-email"></i> 商务合作：juxingdp@126.com</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 加入我们：juxingdp@126.com</a></li>
-                            <li><a href="#"><i class="ti-email"></i> 产品合作：juxingdp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 商务合作：juxindp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 加入我们：juxindp@126.com</a></li>
+                            <li><a href="#"><i class="ti-email"></i> 产品合作：juxindp@126.com</a></li>
                         </ul>
                     </div>
                 </div>
