--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -680,7 +680,7 @@
                             <div class="email">
                                 <i class="bi bi-envelope"></i>
                                 <h4>邮箱：</h4>
-                                <p>juxingdp@126.com</p>
+                                <p>juxindp@126.com</p>
                             </div>
 
                             <div class="phone">
@@ -812,7 +812,7 @@
                     <p>
                         盐城市城南新区新弄里2号楼909室<br>
                         <strong>服务热线:</strong> 400-044-0515<br>
-                        <strong>邮箱:</strong>juxingdp@126.com<br>
+                        <strong>邮箱:</strong>juxindp@126.com<br>
                     </p>
                 </div>
 
