--- a/juxingyunchuang/PL_Page/PL_Page.html
+++ b/juxingyunchuang/PL_Page/PL_Page.html
@@ -281,7 +281,7 @@
                     <p class="fz16">总经理/张总</p>
                     <p class="fz12">吉林省某医药批发公司</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我们是吉林的一家医药连锁批发公司，目前客户全国各地都有，公司每月发票邮寄的费用成本也在增多，随着公司业务量的增多，开票量也明显增多，以前需要两个会计专职负责开票，使用聚星电票发票批量处理系统极速版之后，批量开发票大大的提高了我们的开票效率，最近我们也开通了电子发票，这个软件可以直接支持批量开电票，非常方便。
+                        我们是吉林的一家医药连锁批发公司，目前客户全国各地都有，公司每月发票邮寄的费用成本也在增多，随着公司业务量的增多，开票量也明显增多，以前需要两个会计专职负责开票，使用发票批量处理系统极速版之后，批量开发票大大的提高了我们的开票效率，最近我们也开通了电子发票，这个软件可以直接支持批量开电票，非常方便。
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -291,7 +291,7 @@
                     <p class="fz16">财务总监/李总</p>
                     <p class="fz12">北京某电商平台</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我们是网上商城，聚星电票发票批量处理系统极速版从根本上解决了我们公司开发票费时费力的问题，之前我们公司雇佣了四个开票员专门开发票。就这样到月底的那几天还忙不过来，加班加点的，效率很低。上了这套软件之后，我们部门的人力成本从四个变成了两个，出错率也大大降低，每个月做账报账也比之前更及时，出纳员也更轻松了。 </p>
+                        我们是网上商城，发票批量处理系统极速版从根本上解决了我们公司开发票费时费力的问题，之前我们公司雇佣了四个开票员专门开发票。就这样到月底的那几天还忙不过来，加班加点的，效率很低。上了这套软件之后，我们部门的人力成本从四个变成了两个，出错率也大大降低，每个月做账报账也比之前更及时，出纳员也更轻松了。 </p>
                 </div>
                 <div class="col-md-3">
                     <div class="anli-img-new">
@@ -300,7 +300,7 @@
                     <p class="fz16">会计/刘女士</p>
                     <p class="fz12">武汉某汽车4S店</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我们公司开票经常一百多张的开，以前开票要在电脑上一个一个的敲，很麻烦，敲完还得一个一个核对，下班以后经常会加班加到晚上八九点，经一个也是做会计的朋友介绍了聚星电票发票批量处理系统极速版，用了之后才感觉，以前是真的累，现在我们每个月的发票全部直接通过这个软件自动开具，以前几天才能做完的活，现在半天就做完了，而且完全是表格导进去的，也不用担心出错了，特别是聚星电票的服务人员是真的贴心，每次遇到问题都是很耐心的帮忙解决。
+                        我们公司开票经常一百多张的开，以前开票要在电脑上一个一个的敲，很麻烦，敲完还得一个一个核对，下班以后经常会加班加到晚上八九点，经一个也是做会计的朋友介绍了发票批量处理系统极速版，用了之后才感觉，以前是真的累，现在我们每个月的发票全部直接通过这个软件自动开具，以前几天才能做完的活，现在半天就做完了，而且完全是表格导进去的，也不用担心出错了，特别是的服务人员是真的贴心，每次遇到问题都是很耐心的帮忙解决。
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -310,7 +310,7 @@
                     <p class="fz16">出纳/王小姐</p>
                     <p class="fz12">江苏某商贸批发公司</p>
                     <p class="fz14 userInt" style="line-height:28px;">
-                        我每天会有40-60张发票要开出，每次开票我都高度紧张，非常担心开错票。一次偶然的机会听朋友推荐聚星电票发票批量处理系统极速版，可以把我们ERP系统的商品导出后生成模板，批量导入开票软件。几十张发票三五分钟就开完了，大大提高了我的工作效率，真心为聚星电票发票批量处理系统极速版点赞！
+                        我每天会有40-60张发票要开出，每次开票我都高度紧张，非常担心开错票。一次偶然的机会听朋友推荐发票批量处理系统极速版，可以把我们ERP系统的商品导出后生成模板，批量导入开票软件。几十张发票三五分钟就开完了，大大提高了我的工作效率，真心为发票批量处理系统极速版点赞！
                     </p>
                 </div>
             </div>
